[project]
name = "async-provider-etl"
version = "0.1.0"
description = "A package for performing ETL operations on hospital CMS data using asynchronous and parallel processing."
authors = [
    { name = "kartik" }
]
license = "MIT"
dependencies = [
    "aiohttp>=3.9.4, <3.10.0",
    "aiosqlite>=0.20.0, <0.21.0",
    "pandas>=2.2.2, <2.3.0",
    "polars>=1.3.0, <1.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"async-provider-etl" = "async_provider_etl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/async_provider_etl"]
